fix(box-shadow): make box shadow preview box responsive on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -756,3 +756,9 @@ a {
     font-size: 1.3rem;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .box-shadow-preview {
+    --box-size: 70px;
+  }
+}
